# store

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  env.sh  env.sh.example  index.html  landingpage.code-workspace  local-cors-config.json  migrate_listings.py  package-lock.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  style.css
.ebextensions/: 01_build_frontend.config  01_fastapi.config  01_install_dependencies.config  02_wsgi.config
.github/: pull_request_template.md
.github/workflows/: deploy.yml  publish.yml  test.yml
docker/: Dockerfile  Dockerrun.aws.json  build.sh  local_docker.env  run.sh  test.sh
frontend/: .babelrc  .dockerignore  .eslintrc.js  .gitignore  .prettierignore  README.md  eslint.config.js  eslint.config.mjs  index.html  jest.config.js  nodemon.json  package-lock.json  package.json  prettier.config.js  robots.txt  sitemap.xml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/assets/: gstwebrtc-api-2.0.0.min.js
klang_parser/: .gitignore  Cargo.toml
scripts/: build_frontend.sh  migrate_listings.py
sim/: CONTRIBUTING.md  LICENSE  MUJOCO_LOG.TXT  Makefile  README.md  pyproject.toml  setup.py  standing.pt
sim/sim/: env.py  (+7 more)
static/: main.css
store/: requirements-dev.txt  requirements.txt  utils.py
tests/: conftest.py  test_cognito.py  test_data_structures.py  test_images.py  test_krec.py  test_listings.py  test_model.py  test_onshape.py  test_robots.py  test_settings.py  test_users.py  test_website.py
www/: requirements.txt  utils.py
(+647 files in other folders)
